@@ -1,6 +1,7 @@
 1.2
 - Better tokenizer, gives more indicative errors
 - Parser gives more indicative errors
+- Improved select_union_intersect_subtract optimization to avoid parenthesis whenever possible
 
 1.1
 - Incorrect relational operations now raise an exception instead of returning None
